--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,6 +5,9 @@ ffmpeg-python
 fastapi
 uvicorn[standard]
 requests
+sqlalchemy
+psycopg2-binary
+pydantic
 
 # demucs
 # please make sure you have already a pytorch install that is cuda enabled!
